# colcon-recursive-crawl

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
colcon_recursive_crawl/package_discovery/: recursive_crawl.py
test/: spell_check.words  test_flake8.py  test_spell_check.py
